--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -7,6 +7,8 @@ on:
     branches: [ "master" ]
   pull_request:
     branches: [ "master" ]
+  schedule:
+    - cron: 30 9 * * * 
 
 jobs:
   build:
@@ -23,5 +25,12 @@ jobs:
         cache: maven
     - name: Execute Tests
       run: mvn clean test -DSuite=Suite -X
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v6.0.0
+      with:
+       name: Logs
+       path: logs/
+       
+      
 
    
