--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,12 +24,22 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Execute Tests
+      if: always()
       run: mvn clean test -DSuite=Suite -X
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v6.0.0
       with:
        name: Logs
        path: logs/
+
+    - name: Publish Test Report
+      if: always()
+      uses: dorny/test-reporter@v1
+      with:
+        name: TestNG Results
+        path: target/surefire-reports/junitreports/TEST-*.xml
+        reporter: java-junit
+
        
       
 
